--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -700,20 +700,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 12.082737\n",
-      "Train Epoch: 1 Batch: 500 Loss: 1.481464\n",
-      "Train Epoch: 1 Batch: 1000 Loss: 0.880795\n",
-      "Train Epoch: 1 Batch: 1500 Loss: 1.015853\n",
-      "Train Epoch: 1 Batch: 2000 Loss: 1.540204\n",
-      "Train Epoch: 1 Batch: 2500 Loss: 1.287778\n",
-      "Train Epoch: 1 Batch: 3000 Loss: 1.500700\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.394579\n",
-      "Train Epoch: 2 Batch: 500 Loss: 1.088969\n",
-      "Train Epoch: 2 Batch: 1000 Loss: 0.797168\n",
-      "Train Epoch: 2 Batch: 1500 Loss: 0.949196\n",
-      "Train Epoch: 2 Batch: 2000 Loss: 1.349532\n",
-      "Train Epoch: 2 Batch: 2500 Loss: 1.209966\n",
-      "Train Epoch: 2 Batch: 3000 Loss: 1.450671\n"
+      "Train Epoch: 1 Batch: 0 Loss: 11.982148\n",
+      "Train Epoch: 1 Batch: 500 Loss: 1.479183\n",
+      "Train Epoch: 1 Batch: 1000 Loss: 0.878310\n",
+      "Train Epoch: 1 Batch: 1500 Loss: 1.031451\n",
+      "Train Epoch: 1 Batch: 2000 Loss: 1.543467\n",
+      "Train Epoch: 1 Batch: 2500 Loss: 1.288050\n",
+      "Train Epoch: 1 Batch: 3000 Loss: 1.509490\n",
+      "Train Epoch: 2 Batch: 0 Loss: 1.390781\n",
+      "Train Epoch: 2 Batch: 500 Loss: 1.086495\n",
+      "Train Epoch: 2 Batch: 1000 Loss: 0.794820\n",
+      "Train Epoch: 2 Batch: 1500 Loss: 0.962941\n",
+      "Train Epoch: 2 Batch: 2000 Loss: 1.351046\n",
+      "Train Epoch: 2 Batch: 2500 Loss: 1.210128\n",
+      "Train Epoch: 2 Batch: 3000 Loss: 1.457667\n",
+      "Train Epoch: 2 Batch: 500 Loss: 1.092167\n",
+      "Train Epoch: 2 Batch: 1000 Loss: 0.795037\n",
+      "Train Epoch: 2 Batch: 1500 Loss: 0.957052\n",
+      "Train Epoch: 2 Batch: 2000 Loss: 1.357181\n",
+      "Train Epoch: 2 Batch: 2500 Loss: 1.213022\n",
+      "Train Epoch: 2 Batch: 3000 Loss: 1.458068\n"
      ]
     }
    ],
@@ -726,7 +732,7 @@
     "\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    train_loader = PyTorchTileDBDataLoader(\n",
-    "        ArrayParams(x), ArrayParams(y), dataloader_params=dataloader_params, csr=False\n",
+    "        ArrayParams(x), ArrayParams(y), **dataloader_params, csr=False\n",
     "    )\n",
     "    #Number of ratings x (user + movies)\n",
     "    datashape_x = (100000, 2625)\n",
@@ -751,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": []
