pass dataloader params in Dataloader, pytorch tests update (#165)
* pass dataloader params in Dataloader, pytorch tests update

* docstring update pytorch reader

* update notebook examples

* PR changes

--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -49,11 +49,93 @@
    "execution_count": 2,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/MNIST/raw/train-images-idx3-ubyte.gz to ./data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/MNIST/raw/train-labels-idx1-ubyte.gz to ./data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/MNIST/raw/t10k-images-idx3-ubyte.gz to ./data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "100.0%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n",
+      "Extracting ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "data = torchvision.datasets.MNIST('./data', train=False, download=True)"
    ]
@@ -61,11 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -105,7 +183,6 @@
    "execution_count": 4,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -147,11 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_dir = os.path.join(\"data/pytorch_data_api_tiledb_dense\")\n",
@@ -184,7 +257,6 @@
    "execution_count": 6,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -250,7 +322,6 @@
    "execution_count": 7,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -258,7 +329,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12ffe7640>"
+       "<matplotlib.image.AxesImage at 0x12b531bb0>"
       ]
      },
      "execution_count": 7,
@@ -304,7 +375,6 @@
    "execution_count": 8,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -313,26 +383,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 14.259003\n",
-      "Train Epoch: 1 Batch: 100 Loss: 2.302585\n",
-      "Train Epoch: 1 Batch: 200 Loss: 2.302585\n",
-      "Train Epoch: 1 Batch: 300 Loss: 2.302585\n",
-      "Train Epoch: 1 Batch: 400 Loss: 2.302585\n",
-      "Train Epoch: 1 Batch: 500 Loss: 2.311349\n",
-      "Train Epoch: 1 Batch: 600 Loss: 1.965141\n",
-      "Train Epoch: 1 Batch: 700 Loss: 2.071231\n",
-      "Train Epoch: 1 Batch: 800 Loss: 1.871267\n",
-      "Train Epoch: 1 Batch: 900 Loss: 1.905761\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.951554\n",
-      "Train Epoch: 2 Batch: 100 Loss: 1.847873\n",
-      "Train Epoch: 2 Batch: 200 Loss: 1.860846\n",
-      "Train Epoch: 2 Batch: 300 Loss: 2.069581\n",
-      "Train Epoch: 2 Batch: 400 Loss: 1.885491\n",
-      "Train Epoch: 2 Batch: 500 Loss: 2.049599\n",
-      "Train Epoch: 2 Batch: 600 Loss: 2.052642\n",
-      "Train Epoch: 2 Batch: 700 Loss: 2.121343\n",
-      "Train Epoch: 2 Batch: 800 Loss: 2.021918\n",
-      "Train Epoch: 2 Batch: 900 Loss: 2.026648\n"
+      "Train Epoch: 1 Batch: 0 Loss: 12.959787\n",
+      "Train Epoch: 1 Batch: 100 Loss: 2.086092\n",
+      "Train Epoch: 1 Batch: 200 Loss: 2.031182\n",
+      "Train Epoch: 1 Batch: 300 Loss: 2.119457\n",
+      "Train Epoch: 1 Batch: 400 Loss: 2.226236\n",
+      "Train Epoch: 1 Batch: 500 Loss: 2.139323\n",
+      "Train Epoch: 1 Batch: 600 Loss: 2.028392\n",
+      "Train Epoch: 1 Batch: 700 Loss: 2.202213\n",
+      "Train Epoch: 1 Batch: 800 Loss: 1.859172\n",
+      "Train Epoch: 1 Batch: 900 Loss: 1.626972\n",
+      "Train Epoch: 2 Batch: 0 Loss: 2.168812\n",
+      "Train Epoch: 2 Batch: 100 Loss: 1.877377\n",
+      "Train Epoch: 2 Batch: 200 Loss: 1.997770\n",
+      "Train Epoch: 2 Batch: 300 Loss: 1.837427\n",
+      "Train Epoch: 2 Batch: 400 Loss: 1.990556\n",
+      "Train Epoch: 2 Batch: 500 Loss: 1.998828\n",
+      "Train Epoch: 2 Batch: 600 Loss: 1.977046\n",
+      "Train Epoch: 2 Batch: 700 Loss: 1.969682\n",
+      "Train Epoch: 2 Batch: 800 Loss: 1.950154\n",
+      "Train Epoch: 2 Batch: 900 Loss: 1.937999\n"
      ]
     }
    ],
@@ -340,7 +410,8 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
-    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader, ArrayParams\n",
+    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader\n",
+    "from tiledb.ml.readers.types import ArrayParams\n",
     "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self, shape):\n",
@@ -359,11 +430,14 @@
     "        x = self.flatten(x)\n",
     "        logits = self.linear_relu_stack(x)\n",
     "        return logits\n",
+    "    \n",
+    "dataloader_params = {\"batch_size\": 64,\n",
+    "                     \"num_workers\": 2}\n",
     "\n",
     "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    train_loader = PyTorchTileDBDataLoader(\n",
-    "        ArrayParams(x), ArrayParams(y), batch_size=64, shuffle_buffer_size=128\n",
+    "        ArrayParams(x), ArrayParams(y), **dataloader_params, shuffle_buffer_size=128\n",
     "    )\n",
     "    net = Net(shape=(28, 28))\n",
     "    criterion = nn.CrossEntropyLoss()\n",
