--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -38,7 +38,6 @@
    "execution_count": 2,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -78,7 +77,6 @@
    "execution_count": 3,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -126,7 +124,6 @@
    "execution_count": 4,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -158,7 +155,6 @@
    "execution_count": 5,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -220,7 +216,6 @@
    "execution_count": 6,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -228,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x15cde5e80>"
+       "<matplotlib.image.AxesImage at 0x157c2e8e0>"
       ]
      },
      "execution_count": 6,
@@ -270,7 +265,6 @@
    "execution_count": 7,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -309,7 +303,6 @@
    "execution_count": 8,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -325,7 +318,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-05 18:13:38.031008: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-07-26 13:24:54.724292: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -333,15 +326,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "938/938 [==============================] - 4s 4ms/step - loss: 0.3456 - accuracy: 0.9013\n",
+      "938/938 [==============================] - 5s 4ms/step - loss: 0.3414 - accuracy: 0.9013\n",
       "Epoch 2/5\n",
-      "938/938 [==============================] - 3s 3ms/step - loss: 0.1683 - accuracy: 0.9510\n",
+      "938/938 [==============================] - 4s 4ms/step - loss: 0.1662 - accuracy: 0.9515\n",
       "Epoch 3/5\n",
-      "938/938 [==============================] - 3s 3ms/step - loss: 0.1254 - accuracy: 0.9631\n",
+      "938/938 [==============================] - 4s 4ms/step - loss: 0.1252 - accuracy: 0.9631\n",
       "Epoch 4/5\n",
-      "938/938 [==============================] - 3s 3ms/step - loss: 0.1037 - accuracy: 0.9687\n",
+      "938/938 [==============================] - 4s 4ms/step - loss: 0.1021 - accuracy: 0.9694\n",
       "Epoch 5/5\n",
-      "938/938 [==============================] - 3s 3ms/step - loss: 0.0873 - accuracy: 0.9730\n"
+      "938/938 [==============================] - 4s 4ms/step - loss: 0.0878 - accuracy: 0.9735\n"
      ]
     }
    ],
@@ -355,8 +348,9 @@
     "    tiledb_dataset = TensorflowTileDBDataset(\n",
     "        ArrayParams(array=x, fields=['features']),\n",
     "        ArrayParams(array=y, fields=['features']),\n",
-    "        batch_size=64, shuffle_buffer_size=128\n",
-    "    )\n",
+    "        num_workers=2        \n",
+    "    )    \n",
+    "    tiledb_dataset = tiledb_dataset.batch(64).shuffle(128)\n",
     "    model.fit(tiledb_dataset, epochs=5)"
    ]
   },
@@ -365,7 +359,6 @@
    "execution_count": 9,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -397,13 +390,6 @@
    "source": [
     "model.summary()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
