Update example notebooks to write under examples/data/

--- a/examples/models/sklearn_tiledb_models_example.ipynb
+++ b/examples/models/sklearn_tiledb_models_example.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -23,21 +22,21 @@
    },
    "outputs": [],
    "source": [
+    "import glob\n",
+    "import json\n",
+    "import os\n",
+    "import shutil\n",
+    "from pprint import pprint\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import tiledb\n",
-    "import json\n",
-    "import os\n",
-    "import glob\n",
-    "\n",
     "from sklearn.datasets import fetch_openml\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.utils import check_random_state\n",
     "from sklearn import tree\n",
-    "\n",
-    "from pprint import pprint\n",
     "\n",
     "from tiledb.ml.models.sklearn import SklearnTileDBModel"
    ]
@@ -72,11 +71,12 @@
     }
    ],
    "source": [
+    "data_home = os.path.join(os.path.pardir, \"data\")\n",
     "train_samples = 5000\n",
     "\n",
     "# Load data from https://www.openml.org/d/554\n",
     "print('Data fetching...')\n",
-    "X, y = fetch_openml('mnist_784', version=1, return_X_y=True, as_frame=False)\n",
+    "X, y = fetch_openml('mnist_784', version=1, return_X_y=True, as_frame=False, data_home=data_home)\n",
     "\n",
     "random_state = check_random_state(0)\n",
     "permutation = random_state.permutation(X.shape[0])\n",
@@ -119,8 +119,8 @@
      "text": [
       "Model fit...\n",
       "Model score...\n",
-      "Sparsity with L1 penalty: 69.69%\n",
-      "Test score with L1 penalty: 0.8300\n"
+      "Sparsity with L1 penalty: 61.53%\n",
+      "Test score with L1 penalty: 0.8325\n"
      ]
     }
    ],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -166,7 +166,8 @@
    },
    "outputs": [],
    "source": [
-    "tiledb_model_1 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-1', model=clf)\n",
+    "uri = os.path.join(data_home, 'sklearn-mnist-1')\n",
+    "tiledb_model_1 = SklearnTileDBModel(uri=uri, model=clf)\n",
     "\n",
     "tiledb_model_1.save(meta={'Sparsity_with_L1_penalty': sparsity,\n",
     "                          'score': score})"
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -194,29 +195,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['tiledb-sklearn-mnist-1/__meta',\n",
-      " 'tiledb-sklearn-mnist-1/__lock.tdb',\n",
-      " 'tiledb-sklearn-mnist-1/__schema',\n",
-      " 'tiledb-sklearn-mnist-1/__1645777430190_1645777430190_edce3998d2794393915ac1bde5c48887_10',\n",
-      " 'tiledb-sklearn-mnist-1/__1645777430190_1645777430190_edce3998d2794393915ac1bde5c48887_10.ok']\n",
+      "['../data/sklearn-mnist-1/__fragment_meta',\n",
+      " '../data/sklearn-mnist-1/__meta',\n",
+      " '../data/sklearn-mnist-1/__fragments',\n",
+      " '../data/sklearn-mnist-1/__commits',\n",
+      " '../data/sklearn-mnist-1/__schema']\n",
       "\n",
-      "Key: Sparsity_with_L1_penalty, Value: 69.6938775510204\n",
+      "Key: Sparsity_with_L1_penalty, Value: 61.530612244897966\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK, Value: SKLEARN\n",
-      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 0.24.1\n",
+      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 1.0.2\n",
       "Key: TILEDB_ML_MODEL_PREVIEW, Value: LogisticRegression(C=0.01, penalty='l1', solver='saga', tol=0.1)\n",
-      "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.7.8\n",
+      "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.7.13\n",
       "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
-      "Key: score, Value: 0.83\n"
+      "Key: score, Value: 0.8325\n"
      ]
     }
    ],
    "source": [
     "# Check array directory\n",
-    "pprint(glob.glob('tiledb-sklearn-mnist-1/*'))\n",
+    "pprint(glob.glob(f'{uri}/*'))\n",
     "\n",
     "# Open in write mode in order to add metadata\n",
     "print()\n",
-    "model_array_1 = tiledb.open('tiledb-sklearn-mnist-1')\n",
+    "model_array_1 = tiledb.open(uri)\n",
     "for key, value in model_array_1.meta.items():\n",
     "    if isinstance(value, bytes):\n",
     "        value = json.loads(value)\n",
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -246,25 +247,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Key: Sparsity_with_L1_penalty, Value: 69.6938775510204\n",
+      "Key: Sparsity_with_L1_penalty, Value: 61.530612244897966\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK, Value: SKLEARN\n",
-      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 0.24.1\n",
+      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 1.0.2\n",
       "Key: TILEDB_ML_MODEL_PREVIEW, Value: LogisticRegression(C=0.01, penalty='l1', solver='saga', tol=0.1)\n",
-      "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.7.8\n",
+      "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.7.13\n",
       "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
       "Key: new_meta, Value: [\"Any kind of info\"]\n",
-      "Key: score, Value: 0.83\n"
+      "Key: score, Value: 0.8325\n"
      ]
     }
    ],
    "source": [
     "# Open the array in write mode\n",
-    "with tiledb.Array('tiledb-sklearn-mnist-1', \"w\") as A:\n",
+    "with tiledb.Array(uri, \"w\") as A:\n",
     "    # Keep all history\n",
     "    A.meta['new_meta'] = json.dumps(['Any kind of info'])\n",
     "\n",
     "# Check that everything is there\n",
-    "model_array_1 = tiledb.open('tiledb-sklearn-mnist-1')\n",
+    "model_array_1 = tiledb.open(uri)\n",
     "for key, value in model_array_1.meta.items():\n",
     "    if isinstance(value, bytes):\n",
     "        value = json.loads(value)\n",
@@ -275,20 +276,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Moving on, we can load the trained models for evaluation or retraining, as usual with Sklearn models.\n",
-    "What is really nice with saving models as TileDB array, is native versioning based on fragments as described\n",
-    "[here](https://docs.tiledb.com/main/concepts/data-format#immutable-fragments). We can load a model, retrain it\n",
-    "with new data and update the already existing TileDB model array with new model parameters and metadata. All information, old\n",
-    "and new will be there and accessible. This is extremely useful when you retrain with new data or trying different architectures\n",
-    "for the same problem, and you want to keep track of all your experiments without having to store different model instances. In our case,\n",
-    "let's continue training tiledb-sklearn-mnist-1 with test data (just for simplicity). After training is done, we can save the model\n",
-    "again with update=True. You will notice the extra directories and files (fragments) added to tiledb-sklearn-mnist-1 TileDB array directory,\n",
-    "which keep all versions of the model."
+    "Moving on, we can load the trained models for evaluation or retraining, as usual with Sklearn models. What is really nice with saving models as TileDB array, is native versioning based on fragments as described [here](https://docs.tiledb.com/main/concepts/data-format#immutable-fragments). We can load a model, retrain it with new data and update the already existing TileDB model array with new model parameters and metadata. All information, old and new will be there and accessible. This is extremely useful when you retrain with new data or trying different architectures for the same problem, and you want to keep track of all your experiments without having to store different model instances. In our case, let's continue training `sklearn-mnist-1` with test data (just for simplicity). After training is done, we can save the model again with `update=True`. You will notice the extra directories and files (fragments) added to `sklearn-mnist-1` TileDB array directory, which keep all versions of the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -300,41 +293,32 @@
      "output_type": "stream",
      "text": [
       "Model score...\n",
-      "Sparsity with L1 penalty: 45.14%\n",
-      "Test score with L1 penalty: 0.7395\n",
+      "Sparsity with L1 penalty: 61.53%\n",
+      "Test score with L1 penalty: 0.8325\n",
       "Model fit...\n",
       "Model score...\n",
-      "Sparsity with L1 penalty: 45.75%\n",
-      "Test score with L1 penalty: 0.7400\n",
+      "Sparsity with L1 penalty: 46.21%\n",
+      "Test score with L1 penalty: 0.7401\n",
       "\n",
-      "['tiledb-sklearn-mnist-1/__meta',\n",
-      " 'tiledb-sklearn-mnist-1/__lock.tdb',\n",
-      " 'tiledb-sklearn-mnist-1/__1645777451654_1645777451654_9a4afd6df5324e04ab010b52ddd3a403_10',\n",
-      " 'tiledb-sklearn-mnist-1/__1645777477746_1645777477746_74943f326a114caa9c0097db8f0bc878_10.ok',\n",
-      " 'tiledb-sklearn-mnist-1/__schema',\n",
-      " 'tiledb-sklearn-mnist-1/__1645777430190_1645777430190_edce3998d2794393915ac1bde5c48887_10',\n",
-      " 'tiledb-sklearn-mnist-1/__1645777451654_1645777451654_9a4afd6df5324e04ab010b52ddd3a403_10.ok',\n",
-      " 'tiledb-sklearn-mnist-1/__1645777477746_1645777477746_74943f326a114caa9c0097db8f0bc878_10',\n",
-      " 'tiledb-sklearn-mnist-1/__1645777430190_1645777430190_edce3998d2794393915ac1bde5c48887_10.ok']\n",
+      "['../data/sklearn-mnist-1/__fragment_meta',\n",
+      " '../data/sklearn-mnist-1/__meta',\n",
+      " '../data/sklearn-mnist-1/__fragments',\n",
+      " '../data/sklearn-mnist-1/__commits',\n",
+      " '../data/sklearn-mnist-1/__schema']\n",
       "\n",
       "====== FRAGMENTS  INFO ======\n",
-      "array uri: tiledb-sklearn-mnist-1\n",
-      "number of fragments: 3\n",
+      "array uri: ../data/sklearn-mnist-1\n",
+      "number of fragments: 2\n",
       "\n",
       "===== FRAGMENT NUMBER 0 =====\n",
-      "timestamp range: (1645777430190, 1645777430190)\n",
-      "number of unconsolidated metadata: 3\n",
-      "version: 10\n",
+      "timestamp range: (1660134739235, 1660134739235)\n",
+      "number of unconsolidated metadata: 2\n",
+      "version: 14\n",
       "\n",
       "===== FRAGMENT NUMBER 1 =====\n",
-      "timestamp range: (1645777451654, 1645777451654)\n",
-      "number of unconsolidated metadata: 3\n",
-      "version: 10\n",
-      "\n",
-      "===== FRAGMENT NUMBER 2 =====\n",
-      "timestamp range: (1645777477746, 1645777477746)\n",
-      "number of unconsolidated metadata: 3\n",
-      "version: 10\n"
+      "timestamp range: (1660134745067, 1660134745067)\n",
+      "number of unconsolidated metadata: 2\n",
+      "version: 14\n"
      ]
     }
    ],
@@ -362,18 +346,18 @@
     "print(\"Test score with L1 penalty: %.4f\" % score)\n",
     "\n",
     "\n",
-    "tiledb_model_1 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-1', model=loaded_clf)\n",
+    "tiledb_model_1 = SklearnTileDBModel(uri=uri, model=loaded_clf)\n",
     "tiledb_model_1.save(update=True,\n",
     "                    meta={'Sparsity_with_L1_penalty': sparsity,\n",
     "                          'score': score})\n",
     "\n",
     "# Check array directory\n",
     "print()\n",
-    "pprint(glob.glob('tiledb-sklearn-mnist-1/*'))\n",
+    "pprint(glob.glob(f'{uri}/*'))\n",
     "\n",
     "\n",
     "# tiledb.array_fragments() requires TileDB-Py version > 0.8.5\n",
-    "fragments_info = tiledb.array_fragments('tiledb-sklearn-mnist-1')\n",
+    "fragments_info = tiledb.array_fragments(uri)\n",
     "\n",
     "print()\n",
     "print(\"====== FRAGMENTS  INFO ======\")\n",
@@ -406,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -418,7 +402,7 @@
      "output_type": "stream",
      "text": [
       "Fit...\n",
-      "Test score: 0.7646\n"
+      "Test score: 0.7698\n"
      ]
     }
    ],
@@ -435,7 +419,8 @@
     "print(\"Test score: %.4f\" % score)\n",
     "\n",
     "# Declare a SklearnTileDBModel object\n",
-    "tiledb_model_2 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-2', model=clf)\n",
+    "uri2 = os.path.join(data_home, 'sklearn-mnist-2')\n",
+    "tiledb_model_2 = SklearnTileDBModel(uri=uri2, model=clf)\n",
     "\n",
     "# Save model as a TileDB array\n",
     "tiledb_model_2.save(meta={'score': score})"
@@ -451,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -461,18 +446,19 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "'../data/tiledb-sklearn-mnist/sklearn-mnist-2'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tiledb.group_create('MNIST_Group')\n",
-    "os.system('mv tiledb-sklearn-mnist-1 MNIST_Group/')\n",
-    "os.system('mv tiledb-sklearn-mnist-2 MNIST_Group/')"
+    "group = os.path.join(data_home, 'tiledb-sklearn-mnist')\n",
+    "tiledb.group_create(group)\n",
+    "shutil.move(uri, group)\n",
+    "shutil.move(uri2, group)"
    ]
   },
   {
@@ -484,28 +470,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file:///home/gsk/projects/TileDB-ML/examples/data/tiledb-sklearn-mnist/sklearn-mnist-1 array\n",
+      "file:///home/gsk/projects/TileDB-ML/examples/data/tiledb-sklearn-mnist/sklearn-mnist-2 array\n"
+     ]
+    }
+   ],
    "source": [
-    "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
+    "tiledb.ls(group, lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -519,9 +507,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
