--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -47,10 +47,11 @@
    },
    "outputs": [],
    "source": [
-    "data_dir = os.path.join(\"data/pytorch_data_api_tiledb_sparse\")\n",
+    "data_home = os.path.join(os.path.pardir, 'data')\n",
+    "data_dir = os.path.join(data_home, 'readers', 'pytorch', 'sparse')\n",
     "os.makedirs(data_dir, exist_ok=True)\n",
     "\n",
-    "filename = os.path.join(data_dir, \"u.data\")\n",
+    "filename = os.path.join(data_home, \"movielens-ml-100k-u.data\")\n",
     "if not os.path.exists(filename):\n",
     "    url = \"https://files.grouplens.org/datasets/movielens/ml-100k/u.data\"\n",
     "    urllib.request.urlretrieve(url, filename)"
@@ -686,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -697,43 +698,40 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gsk/projects/TileDB-ML/tiledb/ml/readers/pytorch.py:170: UserWarning: Sparse CSR tensor support is in beta state. If you miss a functionality in the sparse tensor support, please submit a feature request to https://github.com/pytorch/pytorch/issues. (Triggered internally at  /home/conda/feedstock_root/build_artifacts/pytorch-recipe_1658221034001/work/aten/src/ATen/SparseCsrTensorImpl.cpp:66.)\n",
+      "  stacked.shape,\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 11.982148\n",
-      "Train Epoch: 1 Batch: 500 Loss: 1.479183\n",
-      "Train Epoch: 1 Batch: 1000 Loss: 0.878310\n",
-      "Train Epoch: 1 Batch: 1500 Loss: 1.031451\n",
-      "Train Epoch: 1 Batch: 2000 Loss: 1.543467\n",
-      "Train Epoch: 1 Batch: 2500 Loss: 1.288050\n",
-      "Train Epoch: 1 Batch: 3000 Loss: 1.509490\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.390781\n",
-      "Train Epoch: 2 Batch: 500 Loss: 1.086495\n",
-      "Train Epoch: 2 Batch: 1000 Loss: 0.794820\n",
-      "Train Epoch: 2 Batch: 1500 Loss: 0.962941\n",
-      "Train Epoch: 2 Batch: 2000 Loss: 1.351046\n",
-      "Train Epoch: 2 Batch: 2500 Loss: 1.210128\n",
-      "Train Epoch: 2 Batch: 3000 Loss: 1.457667\n",
-      "Train Epoch: 2 Batch: 500 Loss: 1.092167\n",
-      "Train Epoch: 2 Batch: 1000 Loss: 0.795037\n",
-      "Train Epoch: 2 Batch: 1500 Loss: 0.957052\n",
-      "Train Epoch: 2 Batch: 2000 Loss: 1.357181\n",
-      "Train Epoch: 2 Batch: 2500 Loss: 1.213022\n",
-      "Train Epoch: 2 Batch: 3000 Loss: 1.458068\n"
+      "Train Epoch: 1 Batch: 0 Loss: 11.926880\n",
+      "Train Epoch: 1 Batch: 500 Loss: 1.468971\n",
+      "Train Epoch: 1 Batch: 1000 Loss: 0.879726\n",
+      "Train Epoch: 1 Batch: 1500 Loss: 1.019065\n",
+      "Train Epoch: 1 Batch: 2000 Loss: 1.534842\n",
+      "Train Epoch: 1 Batch: 2500 Loss: 1.282928\n",
+      "Train Epoch: 1 Batch: 3000 Loss: 1.501987\n",
+      "Train Epoch: 2 Batch: 0 Loss: 1.401106\n",
+      "Train Epoch: 2 Batch: 500 Loss: 1.085804\n",
+      "Train Epoch: 2 Batch: 1000 Loss: 0.793254\n",
+      "Train Epoch: 2 Batch: 1500 Loss: 0.954215\n",
+      "Train Epoch: 2 Batch: 2000 Loss: 1.347507\n",
+      "Train Epoch: 2 Batch: 2500 Loss: 1.206381\n",
+      "Train Epoch: 2 Batch: 3000 Loss: 1.451027\n"
      ]
     }
    ],
    "source": [
     "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader, ArrayParams\n",
     "\n",
-    "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2, \"py.init_buffer_bytes\": 1024**2})\n",
-    "\n",
-    "dataloader_params = {\"batch_size\": 32}\n",
-    "\n",
+    "ctx = tiledb.Ctx({'py.init_buffer_bytes': 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
-    "    train_loader = PyTorchTileDBDataLoader(\n",
-    "        ArrayParams(x), ArrayParams(y), **dataloader_params, csr=False\n",
-    "    )\n",
+    "    train_loader = PyTorchTileDBDataLoader(ArrayParams(x), ArrayParams(y), batch_size=32)\n",
     "    #Number of ratings x (user + movies)\n",
     "    datashape_x = (100000, 2625)\n",
     "\n",
@@ -754,13 +752,6 @@
     "            if batch_idx % 500 == 0:\n",
     "                print('Train Epoch: {} Batch: {} Loss: {:.6f}'.format(epoch, batch_idx, loss.item()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -779,7 +770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
