--- a/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
@@ -51,10 +51,11 @@
    },
    "outputs": [],
    "source": [
-    "data_dir = os.path.join(\"data/tensorflow_data_api_tiledb_sparse\")\n",
+    "data_home = os.path.join(os.path.pardir, 'data')\n",
+    "data_dir = os.path.join(data_home, 'readers', 'tensorflow', 'sparse')\n",
     "os.makedirs(data_dir, exist_ok=True)\n",
     "\n",
-    "filename = os.path.join(data_dir, \"u.data\")\n",
+    "filename = os.path.join(data_home, \"movielens-ml-100k-u.data\")\n",
     "if not os.path.exists(filename):\n",
     "    url = \"https://files.grouplens.org/datasets/movielens/ml-100k/u.data\"\n",
     "    urllib.request.urlretrieve(url, filename)"
@@ -680,7 +681,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-26 13:28:43.457755: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-08-10 16:45:26.010343: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -688,19 +689,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3125/3125 [==============================] - 3s 832us/step - loss: 0.0000e+00 - accuracy: 0.0607\n",
+      "3125/3125 [==============================] - 4s 996us/step - loss: 0.0000e+00 - accuracy: 0.0607\n",
       "Epoch 2/2\n",
-      "3125/3125 [==============================] - 3s 697us/step - loss: 0.0000e+00 - accuracy: 0.0611\n"
+      "3125/3125 [==============================] - 3s 825us/step - loss: 0.0000e+00 - accuracy: 0.0611\n"
      ]
     }
    ],
    "source": [
     "from tiledb.ml.readers.tensorflow import TensorflowTileDBDataset, ArrayParams\n",
     "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2, \"py.init_buffer_bytes\": 1024**2})\n",
+    "ctx = tiledb.Ctx({'py.init_buffer_bytes': 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    tiledb_dataset = TensorflowTileDBDataset(\n",
     "        ArrayParams(array=x, fields=['features']),\n",
@@ -727,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
